<resources>
    <string name="app_name">BeMyDJ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_user_info">User Info</string>
    <string name="menu_app_instruction">App Instruction</string>
    <string name="menu_network_control">Network Control</string>

    <string name="title_activity_network_control">NetworkControlActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="network_control_tab_1">Network Control</string>
    <string name="network_control_tab_2">Available listeners</string>
    <string name="network_control_tab_3">Group</string>
    <string name="network_control_discover_peers">Search for listeners</string>
    <string name="discovery_started">Discovery started</string>
    <string name="discovery_stopped">Discovery stopped</string>
    <string name="discovery_initiated">Discovery initiated</string>
    <string name="discovery_failed">Discovery failed</string>
    <string name="discovery_stop_failed">Discovery stop failed</string>
    <string name="filePicker">Choose file</string>
    <string name="dialog_connect">Connect</string>
    <string name="instructions">Instructions</string>
    <string name="disconnect">Disconnect</string>
</resources>