<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_group"
    android:background="@color/Grey3">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupPeersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>