<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.htw.bemydj.ui.homeScreen.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/nav_network_control"
        android:name="de.htw.bemydj.ui.networkControlView.NetworkControlActivity"
        android:label="@string/menu_network_control"
        tools:layout="@layout/activity_network_control" />
</navigation>